<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="NestedWeights">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10pt"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="75pt"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/precision"
            android:textColor="@color/colorButtonText" />

        <EditText
            android:id="@+id/precision_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            tools:ignore="LabelFor"
            tools:text="@string/default_precision" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/degrees_switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/degrees_switch" />
    </LinearLayout>

</LinearLayout>